--- a/Blogifier.Core/Views/Blogifier/Themes/Standard/Index.cshtml
+++ b/Blogifier.Core/Views/Blogifier/Themes/Standard/Index.cshtml
@@ -6,7 +6,7 @@
 @{
     ViewData["bodyClass"] = "home";
     var logoImg = BlogSettings.Logo;
-    var logoUrl = "http://blogifier.net";
+    var logoUrl = "http://samerd.in";
     try
     {
         logoImg = Model.LogoImg;
