--- a/Blogifier.Core/Views/Embedded/Admin/Settings/About.cshtml
+++ b/Blogifier.Core/Views/Embedded/Admin/Settings/About.cshtml
@@ -23,9 +23,9 @@
             Blogifier is simple, beautiful, light-weight open source blog written in .NET Core. It is cross-platform, extendable and customizable web application, that brings all expected from modern blog in small, portable package. By default, it uses file-based SQLite database, scaling up to any Entity-Framework compatible data storage.
         </p>
         <ul class="nav text-left">
-            <li class="mr-3"><a href="http://blogifier.net/" target="_blank"><i class="fa fa-globe"></i> blogifier.net</a></li>
-            <li class="mr-3"><a href="https://github.com/blogifierdotnet/" target="_blank"><i class="fa fa-github"></i> GitHub</a></li>
-            <li class="mr-3"><a href="https://twitter.com/blogifierdotnet/" target="_blank"><i class="fa fa-twitter"></i> Twitter</a></li>
+            <li class="mr-3"><a href="http://samerd.in/" target="_blank"><i class="fa fa-globe"></i> samerd.in</a></li>
+            <li class="mr-3"><a href="https://github.com/samerzmd/" target="_blank"><i class="fa fa-github"></i> GitHub</a></li>
+            <li class="mr-3"><a href="https://twitter.com/SamerZMD" target="_blank"><i class="fa fa-twitter"></i> Twitter</a></li>
         </ul>
     </div>
 
