--- a/Blogifier.Web/Views/Account/_Layout.cshtml
+++ b/Blogifier.Web/Views/Account/_Layout.cshtml
@@ -1,4 +1,4 @@
-@using Blogifier.Core.Common
+﻿@using Blogifier.Core.Common
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,7 +14,7 @@
       @RenderBody()
     </div>
     <div class="bf-account-footer">
-      <a href="http://blogifier.net/" target="_blank" rel="nofollow external" title="Blogifier @ApplicationSettings.Version"><img src="~/admin/img/logo-sm.png" alt="Blogifier"></a>
+      <a href="http://samerd.in/" target="_blank" rel="nofollow external" title="Blogifier @ApplicationSettings.Version"><img src="~/admin/img/logo-sm.png" alt="Samerzmd"></a>
     </div>
   </div>
   @RenderSection("Scripts", required: false)
