--- a/Blogifier.Web/Views/Blogifier/Themes/OneThree/_Shared/_Header.cshtml
+++ b/Blogifier.Web/Views/Blogifier/Themes/OneThree/_Shared/_Header.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Blogifier.Core.Common
 @{
     var logoImg = BlogSettings.Logo;
-    var logoUrl = "http://blogifier.net";
+    var logoUrl = "http://samerd.in";
     try
     {
         logoImg = Model.LogoImg;
