--- a/Blogifier.Web/wwwroot/admin/scss/styles.scss
+++ b/Blogifier.Web/wwwroot/admin/scss/styles.scss
@@ -1,5 +1,5 @@
 ﻿/*
-    Author: Francis - http://francis.bio/blogifier/
+    Author: Samerzmd - http://samerd.in/
 */
 
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500');
