--- a/Blogifier.Core/Views/Blogifier/Themes/Standard/_Shared/_Footer.cshtml
+++ b/Blogifier.Core/Views/Blogifier/Themes/Standard/_Shared/_Footer.cshtml
@@ -24,7 +24,7 @@
 
 <footer class="blog-footer">
     <div class="container d-lg-flex text-center text-lg-left">
-        <p>Copyright © @DateTime.Now.Year. Powered by <a href="http://blogifier.net/" data-toggle="tooltip" target="_blank" title="Version - @ApplicationSettings.Version">Blogifier</a>. Designed by <a href="https://francis.bio/" target="_blank" rel="nofollow">Francis</a>.</p>
+        <p>Copyright © @DateTime.Now.Year. All rights reserved.</p>
         <div class="ml-auto">
             @if (User.Identity.IsAuthenticated)
             {
