--- a/Blogifier.Web/Views/Blogifier/Themes/OneFour/_Shared/_Header.cshtml
+++ b/Blogifier.Web/Views/Blogifier/Themes/OneFour/_Shared/_Header.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Blogifier.Core.Common
 @{
     var logoImg = BlogSettings.Logo;
-    var logoUrl = "http://blogifier.net";
+    var logoUrl = "http://samerd.in";
     try
     {
         logoImg = Model.LogoImg;
@@ -19,9 +19,9 @@
             }
         </a>
         <ul class="blog-social nav ml-auto my-auto">
-            <li class="blog-social-item"><a href="#" target="_blank" class="blog-social-link"><i class="blog-social-icon fa fa-twitter"></i></a></li>
-            <li class="blog-social-item"><a href="#" target="_blank" class="blog-social-link"><i class="blog-social-icon fa fa-google-plus"></i></a></li>
-            <li class="blog-social-item"><a href="#" target="_blank" class="blog-social-link"><i class="blog-social-icon fa fa-facebook-official"></i></a></li>
+            <li class="blog-social-item"><a href="https://twitter.com/SamerZMD" target="_blank" class="blog-social-link"><i class="blog-social-icon fa fa-twitter"></i></a></li>
+            <li class="blog-social-item"><a href="https://plus.google.com/u/0/+%D8%B3%D8%A7%D9%85%D8%B1%D8%B2%D9%87%D9%8A%D8%B1" target="_blank" class="blog-social-link"><i class="blog-social-icon fa fa-google-plus"></i></a></li>
+            <li class="blog-social-item"><a href="https://www.facebook.com/dawalib" target="_blank" class="blog-social-link"><i class="blog-social-icon fa fa-facebook-official"></i></a></li>
         </ul>
         <button class="blog-search-toggle btn-unstyled" type="button" data-toggle="modal" data-target="#blog-search"><i class="fa fa-search"></i></button>
     </div>
